--- a/FarmStory/src/main/webapp/WEB-INF/web.xml
+++ b/FarmStory/src/main/webapp/WEB-INF/web.xml
@@ -20,6 +20,10 @@
     <servlet-name>appServlet</servlet-name>
     <url-pattern>/</url-pattern>
   </servlet-mapping>
+  
+<!-- ////////  Custom Filter  ////////////////////////////////////////////////////////////////////////////////////////////////////// --> 
+  
+  <!-- Encoding Filter (UTF-8) -->
   <filter>
     <filter-name>characterEncodingFilter</filter-name>
     <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
@@ -36,4 +40,5 @@
     <filter-name>characterEncodingFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
+  
 </web-app>
