# 식물 정보 jsp 파일 변경 및 공통부분 인클루드 파일 외 1. 식물 정보 font 변경 2. 인클루드 public-js.jsp 파일 수정 3. ojdbc6.jar 삭제
-by och

--- a/FarmStory/src/main/resources/mysql-environment.properties
+++ b/FarmStory/src/main/resources/mysql-environment.properties
@@ -1,4 +1,4 @@
 datasource.driverClassName=com.mysql.jdbc.Driver
-datasource.url=jdbc:mysql://211.197.18.246/iot2_farmstory
+datasource.url=jdbc:mysql://211.197.18.246/iot2_farmstory?autoReconnect=true&useSSL=false
 datasource.username=iot2_farmstory
 datasource.password=Iot2_farmstory
